--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,9 @@ require Pod::Executable.execute_command('node', ['-p',
 platform :ios, '16.0'
 prepare_react_native_project!
 
+# Disable VisionCamera frame processors to avoid worklets-core conflicts
+$VCEnableFrameProcessors = false
+
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
@@ -20,7 +23,9 @@ target 'CamApp' do
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/.."
+    :app_path => "#{Pod::Config.instance.installation_root}/..",
+    # Disable new architecture to fix react-native-screens linking
+    :new_arch_enabled => false
   )
 
   target 'CamAppTests' do
