--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
     "@shopify/react-native-skia": "^2.4.6",
-    "@spreen/ffmpeg-kit-react-native": "^6.0.3",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-reanimated": "^3.6.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-video": "^6.18.0",
